--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -11,9 +11,8 @@
 {% include 'catalog/includes/inc_catalog_menu.html' %}
 
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-    <h1 class="display-4">Skystore</h1>
-    <p class="lead">Skystore - это отличный вариант хранения ваших плагинов и примеров кода, который вы бы хотели
-        продать</p>
+    <h1 class="display-4">Торговая площадка PRODOVAIKA</h1>
+    <p class="lead">PRODOVAIKA - это отличный вариант продажи любых товаров</p>
 </div>
 
 <div class="container">
