--- a/catalog/templates/catalog/index.html
+++ b/catalog/templates/catalog/index.html
@@ -13,7 +13,7 @@
                 <ul class="list-unstyled mt-3 mb-4 text-start m-3">
                     {{ product.description|slice:100 }}
                 </ul>
-                <button type="button" class="btn btn-lg btn-block btn-outline-primary">Купить</button>
+                <a type="button" href="{% url 'catalog:product' product.pk %}" class="btn btn-lg btn-block btn-outline-primary">Купить</a>
             </div>
         </div>
     </div>
