--- a/catalog/templates/catalog/product.html
+++ b/catalog/templates/catalog/product.html
@@ -1,4 +1,5 @@
 {% extends 'catalog/base.html' %}
+{% load my_tags %}
 {% block content %}
 <div class="col-6">
 
@@ -6,6 +7,9 @@
         <div class="card-header">
             <h4 class="my-0 font-weight-normal">{{ object.name }}</h4>
         </div>
+        <img class="card-img-top"
+             src="{{ object.preview|mymedia }}"
+             alt="Card image cap">
         <div class="card-body">
 
             <h1 class="card-title pricing-card-title">{{ object.price_per_purchase }} руб.</h1>
