--- a/catalog/templates/catalog/index.html
+++ b/catalog/templates/catalog/index.html
@@ -2,6 +2,9 @@
 {% block content %}
 
 <div class="row text-center">
+    <div class="col-12 mb-5">
+        <a class="btn btn-outline-primary" href="{% url 'catalog:create_product' %}">Добавить товар</a>
+    </div>
     {% for product in object_list %}
     <div class="col-3">
         <div class="card mb-4 box-shadow">
@@ -13,7 +16,11 @@
                 <ul class="list-unstyled mt-3 mb-4 text-start m-3">
                     {{ product.description|slice:100 }}
                 </ul>
-                <a type="button" href="{% url 'catalog:product' product.pk %}" class="btn btn-lg btn-block btn-outline-primary">Купить</a>
+                <div class="btn-group">
+                    <a href="{% url 'catalog:product' product.pk %}" type="button" class="btn btn-sm btn-outline-secondary">View</a>
+                    <a href="{% url 'catalog:update_product' product.pk %}" type="button" class="btn btn-sm btn-outline-secondary">Edit</a>
+                    <a href="{% url 'catalog:delete_product' product.pk %}" type="button" class="btn btn-sm btn-outline-secondary">Delete</a>
+                </div>
             </div>
         </div>
     </div>
