--- a/catalog/templates/catalog/product_form.html
+++ b/catalog/templates/catalog/product_form.html
@@ -1,21 +1,27 @@
 {% extends 'catalog/base.html' %}
 
 {% block content %}
-    <div class="col-6">
-        <div class="card">
-            <div class="card-header">
-                <h3 class="card-title">
-                    Добавление товара
-                </h3>
-            </div>
-            <div class="card-body">
-                <form method="post" enctype="multipart/form-data">
-                    {% csrf_token %}
-                    {{ form.as_p }}
-                    <button type="submit" class="btn btn-success">Сохранить</button>
-                </form>
-            </div>
-            <div class="card-footer"></div>
+<div class="col-6">
+    <div class="card">
+        <div class="card-header">
+            <h3 class="card-title">
+                Добавление товара
+            </h3>
         </div>
+        <div class="card-body">
+            <form method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                {{ form.as_p }}
+
+                {{ formset.management_form }}
+                {% for form in formset.forms %}
+                {{ form.as_p }}
+                {% endfor %}
+
+                <button type="submit" class="btn btn-success">Сохранить</button>
+            </form>
+        </div>
+        <div class="card-footer"></div>
     </div>
+</div>
 {% endblock %}
