--- a/catalog/templates/catalog/index.html
+++ b/catalog/templates/catalog/index.html
@@ -3,7 +3,9 @@
 
 <div class="row text-center">
     <div class="col-12 mb-5">
+        {% if user.is_authenticated %}
         <a class="btn btn-outline-primary" href="{% url 'catalog:create_product' %}">Добавить товар</a>
+        {% endif %}
     </div>
     {% for product in object_list %}
     <div class="col-3">
@@ -22,7 +24,7 @@
                 <p>Номер версии {{ product.number_version }}</p>
                 {% endif %}
 
-
+                {% if user.is_authenticated %}
                 <div class="btn-group">
                     <a href="{% url 'catalog:product' product.pk %}" type="button"
                        class="btn btn-sm btn-outline-secondary">View</a>
@@ -31,6 +33,7 @@
                     <a href="{% url 'catalog:delete_product' product.pk %}" type="button"
                        class="btn btn-sm btn-outline-secondary">Delete</a>
                 </div>
+                {% endif %}
             </div>
         </div>
     </div>
