--- a/users/templates/users/reset_password.html
+++ b/users/templates/users/reset_password.html
@@ -1,11 +1,11 @@
 {% extends 'catalog/base.html' %}
 
 {% block content %}
-<div class="col-6">
+<div class="col-4">
     <div class="card">
         <div class="card-header">
             <h3 class="card-title">
-                Вход
+                Восстановление пароля
             </h3>
         </div>
         <div class="card-body">
@@ -18,8 +18,8 @@
                 {{ form.as_p }}
                 {% endfor %}
 
-                <button type="submit" class="btn btn-success">Войти</button>
-                <a class="btn btn-success" href="{% url 'users:reset_password' %}">Восстановить пароль</a>
+                <input type="email" name="mail" placeholder="Введите Email">
+                <button type="submit" class="btn btn-success">Сгенерировать</button>
             </form>
         </div>
         <div class="card-footer"></div>
