--- a/catalog/templates/catalog/index.html
+++ b/catalog/templates/catalog/index.html
@@ -28,8 +28,10 @@
                 <div class="btn-group">
                     <a href="{% url 'catalog:product' product.pk %}" type="button"
                        class="btn btn-sm btn-outline-secondary">View</a>
+                    {% if perms.catalog.can_unpublish_product and perms.catalog.can_edit_description_product and perms.catalog.can_edit_category_product or user == product.owner %}
                     <a href="{% url 'catalog:update_product' product.pk %}" type="button"
                        class="btn btn-sm btn-outline-secondary">Edit</a>
+                    {% endif %}
                     <a href="{% url 'catalog:delete_product' product.pk %}" type="button"
                        class="btn btn-sm btn-outline-secondary">Delete</a>
                 </div>
