--- a/catalog/templates/catalog/includes/inc_catalog_menu.html
+++ b/catalog/templates/catalog/includes/inc_catalog_menu.html
@@ -3,6 +3,7 @@
     <nav class="ms-5">
         <a class="p-2 btn btn-outline-primary" href="/">Каталог</a>
         <a class="p-2 btn btn-outline-primary" href="/contacts/">Контакты</a>
+        <a class="p-2 btn btn-outline-primary" href="/category/">Кaтегории</a>
         <a class="p-2 btn btn-outline-primary" href="{% url 'blogs:blog_list' %}">Блоги</a>
         {% if user.is_authenticated %}
         <a class="p-2 btn btn-outline-primary" href="{% url 'users:logout' %}">Выход</a>
